--- a/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.0.4.final using JasperReports Library version 6.0.4  -->
+<!-- 2015-05-16T22:33:15 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_operativo" language="groovy" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="11259c1e-f1a2-45ab-b041-d07e5220a48a">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="150"/>
@@ -9,11 +11,11 @@
 	<style name="Detail" fontName="PT Sans" fontSize="8"/>
 	<style name="Atencao" mode="Opaque" backcolor="#2ECC71">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[$F{operativos_andamento_id} <  new Integer("6") &&
+			<conditionExpression><![CDATA[$F{operativos_andamento_id}.intValue() <  new Integer("6") &&
 ($F{operativos_data_inicio}.before(new java.util.Date()) &&
 $F{operativos_data_prazo}.after( new java.util.Date() ))
 &&
-((((new java.util.Date()).getTime()-$F{operativos_data_inicio}.getTime() ).doubleValue()/($F{operativos_data_prazo}.getTime() - $F{operativos_data_inicio}.getTime()).doubleValue()) > new Double(0.8))]]></conditionExpression>
+((((new java.util.Date()).getTime()-$F{operativos_data_inicio}.getTime() ).doubleValue()/($F{operativos_data_prazo}.getTime()-$F{operativos_data_inicio}.getTime()).doubleValue()) > new Double(0.8))]]></conditionExpression>
 			<style backcolor="#F1C40F"/>
 		</conditionalStyle>
 		<conditionalStyle>
@@ -154,7 +156,12 @@ ORDER BY
 					<text><![CDATA[Execução:]]></text>
 				</staticText>
 				<ellipse>
-					<reportElement style="Atencao" x="533" y="0" width="22" height="22" uuid="e28b4f6c-3a1a-46cf-9a7d-1d4342c69068"/>
+					<reportElement style="Atencao" x="539" y="1" width="16" height="16" uuid="e28b4f6c-3a1a-46cf-9a7d-1d4342c69068">
+						<property name="local_mesure_unitwidth" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.width" value="px"/>
+						<property name="local_mesure_unitheight" value="pixel"/>
+						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					</reportElement>
 					<graphicElement>
 						<pen lineWidth="0.5"/>
 					</graphicElement>
