--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,6 +14,7 @@
 <?php echo $this->headTitle ();?>
 <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/extjs/resources/css/ext-all-neptune.css' );?>
 <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/css/application.css' );?>
+<?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl () . '/css/ItemSelector.css' );?>
  <?php echo $this->headLink ()->prependStylesheet ( $this->baseUrl ('/codebase/dhtmlxgantt.css') );?>
 <?php  //$this->headScript()->appendFile( $this->baseUrl () . '/javascripts/jsgantt.js') ?>
 <?php  $this->headScript()->appendFile( $this->baseUrl ('/codebase/dhtmlxgantt.js')) ?>
