--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -26,6 +26,7 @@ if(APPLICATION_ENV=='production'){
     $this->headScript()->appendFile( $this->baseUrl () . '/extjs/ext-all-debug.js');
 }
  $this->headScript()->appendFile( $this->baseUrl () . '/extjs/examples/ux/PreviewPlugin.js');
+ $this->headScript()->appendFile( $this->baseUrl ('/extjs/locale/ext-lang-pt_BR.js'));
 ?>
 
 <!-- arquivo principal da aplicação -->
