--- a/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.0.4.final using JasperReports Library version 6.0.4  -->
-<!-- 2015-05-16T22:33:15 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_operativo" language="groovy" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="11259c1e-f1a2-45ab-b041-d07e5220a48a">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="150"/>
@@ -139,7 +137,7 @@ ORDER BY
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
-					<text><![CDATA[Prazo:]]></text>
+					<text><![CDATA[Término:]]></text>
 				</staticText>
 				<staticText>
 					<reportElement style="Detail" positionType="Float" x="0" y="36" width="112" height="12" uuid="6e5581ce-9313-4e52-8ca5-4b1b291ad782"/>
