--- a/application/modules/relatorio/views/scripts/index/geral_financeiro.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_financeiro.jrxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_financeiro" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="c37fc5d7-804c-4cfd-bd01-0fffba3f9b70">
 	<property name="ireport.zoom" value="1.6105100000000008"/>
-	<property name="ireport.x" value="9"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" fontName="PT Sans" fontSize="26" isBold="true" pdfFontName="Helvetica-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="PT Sans" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="PT Sans" fontSize="12" isBold="true"/>
@@ -37,9 +38,9 @@ GROUP BY
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="19" splitType="Stretch">
+		<band height="15" splitType="Stretch">
 			<staticText>
-				<reportElement style="Title" x="0" y="5" width="555" height="14" uuid="dc926514-4f71-4317-ae0c-00f3e4e655ac"/>
+				<reportElement style="Title" x="0" y="1" width="555" height="14" uuid="dc926514-4f71-4317-ae0c-00f3e4e655ac"/>
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
