--- a/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_operativo" language="groovy" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="11259c1e-f1a2-45ab-b041-d07e5220a48a">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="132"/>
+	<property name="ireport.x" value="34"/>
 	<property name="ireport.y" value="0"/>
-        <property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
+	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" fontName="PT Sans" fontSize="50" isBold="true"/>
 	<style name="SubTitle" forecolor="#736343" fontName="PT Sans" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="PT Sans" fontSize="12" isBold="true"/>
@@ -69,9 +69,9 @@ ORDER BY
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="42" splitType="Stretch">
+		<band height="31" splitType="Stretch">
 			<frame>
-				<reportElement x="0" y="0" width="555" height="42" uuid="14258630-7e6b-4931-bd39-1f389d2b1b4f"/>
+				<reportElement x="0" y="0" width="555" height="31" uuid="14258630-7e6b-4931-bd39-1f389d2b1b4f"/>
 				<box>
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
@@ -82,10 +82,10 @@ ORDER BY
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 					<reportElement style="Detail" positionType="Float" x="2" y="20" width="553" height="11" uuid="7026733a-5941-4b8e-9c42-d2623b1d8a71"/>
 					<textElement markup="html"/>
-					<textFieldExpression><![CDATA[$F{operativos_avaliacao_andamento}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["<font size=1>"  + $F{operativos_avaliacao_andamento} + "</font>"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement style="Detail" positionType="Float" x="350" y="0" width="38" height="11" uuid="fbfaa3a5-9137-443f-bed4-c11bf97e752a"/>
+					<reportElement style="Detail" positionType="Float" x="309" y="0" width="38" height="11" uuid="fbfaa3a5-9137-443f-bed4-c11bf97e752a"/>
 					<textFieldExpression><![CDATA[$F{operativos_peso}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
@@ -93,7 +93,7 @@ ORDER BY
 					<textFieldExpression><![CDATA[$F{operativos_data_inicio}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
-					<reportElement style="Detail" positionType="Float" x="220" y="0" width="87" height="11" uuid="5909fd43-63d5-495a-8831-096f78cfa8d2"/>
+					<reportElement style="Detail" positionType="Float" x="179" y="0" width="87" height="11" uuid="5909fd43-63d5-495a-8831-096f78cfa8d2"/>
 					<textFieldExpression><![CDATA[$F{operativos_data_prazo}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
@@ -102,11 +102,11 @@ ORDER BY
 					<textFieldExpression><![CDATA[$F{operativos_data_encerramento}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="#,##0.00 %" isBlankWhenNull="true">
-					<reportElement style="Detail" positionType="Float" x="459" y="10" width="54" height="11" uuid="e38b720d-b9c6-433a-b625-23b1cc100b1e"/>
+					<reportElement style="Detail" positionType="Float" x="455" y="10" width="54" height="11" uuid="e38b720d-b9c6-433a-b625-23b1cc100b1e"/>
 					<textFieldExpression><![CDATA[$F{operativos_percentual_execucao}.doubleValue()/100]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy HH:mm:ss" isBlankWhenNull="true">
-					<reportElement style="Detail" positionType="Float" x="112" y="30" width="147" height="11" uuid="49bf8d08-cbbb-459f-9344-eae7fd1bd6d3"/>
+					<reportElement style="Detail" positionType="Float" x="455" y="0" width="94" height="11" uuid="49bf8d08-cbbb-459f-9344-eae7fd1bd6d3"/>
 					<textFieldExpression><![CDATA[$F{operativos_alteracao_data} != null ?$F{operativos_alteracao_data} : $F{operativos_inclusao_data}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
@@ -121,7 +121,7 @@ ORDER BY
 					<text><![CDATA[Andamento:]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Detail" positionType="Float" x="307" y="0" width="43" height="11" uuid="f1ecfc5a-5ef9-49f7-853c-03b47fbf6405"/>
+					<reportElement style="Detail" positionType="Float" x="266" y="0" width="43" height="11" uuid="f1ecfc5a-5ef9-49f7-853c-03b47fbf6405"/>
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
@@ -135,21 +135,21 @@ ORDER BY
 					<text><![CDATA[Início:]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Detail" positionType="Float" x="174" y="0" width="46" height="11" uuid="391b15f0-fab5-4e01-bf27-39733ecbd51a"/>
+					<reportElement style="Detail" positionType="Float" x="133" y="0" width="46" height="11" uuid="391b15f0-fab5-4e01-bf27-39733ecbd51a"/>
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
 					<text><![CDATA[Término:]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Detail" positionType="Float" x="0" y="30" width="112" height="11" uuid="6e5581ce-9313-4e52-8ca5-4b1b291ad782"/>
+					<reportElement style="Detail" positionType="Float" x="383" y="0" width="71" height="11" uuid="6e5581ce-9313-4e52-8ca5-4b1b291ad782"/>
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
 					<text><![CDATA[Última atualização:]]></text>
 				</staticText>
 				<staticText>
-					<reportElement style="Detail" positionType="Float" x="414" y="10" width="45" height="11" uuid="80fd6d1e-d2e1-4485-838e-486e3fc37116"/>
+					<reportElement style="Detail" positionType="Float" x="414" y="10" width="40" height="11" uuid="80fd6d1e-d2e1-4485-838e-486e3fc37116"/>
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
