--- a/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_operativo" language="groovy" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="11259c1e-f1a2-45ab-b041-d07e5220a48a">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="34"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" fontName="PT Sans" fontSize="50" isBold="true"/>
@@ -69,9 +69,9 @@ ORDER BY
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="37" splitType="Stretch">
+		<band height="42" splitType="Stretch">
 			<frame>
-				<reportElement x="0" y="0" width="555" height="37" uuid="14258630-7e6b-4931-bd39-1f389d2b1b4f"/>
+				<reportElement x="0" y="0" width="555" height="42" uuid="14258630-7e6b-4931-bd39-1f389d2b1b4f"/>
 				<box>
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
@@ -80,9 +80,9 @@ ORDER BY
 					<rightPen lineWidth="0.0"/>
 				</box>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement style="Detail" positionType="Float" x="2" y="24" width="553" height="11" uuid="7026733a-5941-4b8e-9c42-d2623b1d8a71"/>
+					<reportElement style="Detail" positionType="Float" x="2" y="28" width="553" height="11" uuid="7026733a-5941-4b8e-9c42-d2623b1d8a71"/>
 					<textElement markup="html"/>
-					<textFieldExpression><![CDATA["<font size=1>"  + $F{operativos_avaliacao_andamento} + "</font>"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["<div style=\"line-height: 70%;\"><font size=1>"  + $F{operativos_avaliacao_andamento} + "</font></div>"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 					<reportElement style="Detail" positionType="Float" x="309" y="0" width="38" height="11" uuid="fbfaa3a5-9137-443f-bed4-c11bf97e752a"/>
