--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -6,6 +6,7 @@
     var baseUrl = '<?php echo $this->baseUrl ()?>'; 
     var usuario = '<?php echo $this->usuario?>'; 
     var nomeUsuario = '<?php echo $this->nomeUsuario?>'; 
+    var logoutUrl  = '<?php echo $this->logoutUrl; ?>'
     var adminMenu = <?php echo $this->adminMenu ?>;
     var env = '<?php echo APPLICATION_ENV;?>';
     var tag_version = '<?php echo Zend_Registry::get('tag_version'); ?>';
