--- a/application/modules/relatorio/views/scripts/index/basico.jrxml
+++ b/application/modules/relatorio/views/scripts/index/basico.jrxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-06-14T12:57:01 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isTitleNewPage="true" uuid="e69bc383-12d4-4901-8503-507569fba44c">
-	<property name="ireport.zoom" value="1.3310000000000013"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1545"/>
+<!-- 2017-06-14T11:49:44 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="basico" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3d933e1a-69aa-4cb5-abc0-a92a6e89dab7">
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" fontName="PT Sans" fontSize="50" isBold="true"/>
 	<style name="SubTitle" forecolor="#736343" fontName="PT Sans" fontSize="18"/>
@@ -17,6 +14,7 @@
 			<style backcolor="#99FF99"/>
 		</conditionalStyle>
 	</style>
+	<style name="grupo" mode="Opaque" backcolor="#CCCCCC"/>
 	<style name="Atencao" mode="Opaque" backcolor="#2ECC71">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$F{operativos_andamento_id}.intValue() <  new Integer("6") &&
@@ -45,14 +43,14 @@ $F{operativos_data_prazo}.after( new java.util.Date() ))
 			<style backcolor="#3498DB"/>
 		</conditionalStyle>
 	</style>
-	<style name="grupo" mode="Opaque" backcolor="#CCCCCC"/>
 	<subDataset name="projeto_ds" uuid="66b1cd7e-86ae-4a35-b715-b65227f8d001">
 		<parameter name="projeto_id" class="java.lang.Integer">
 			<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
 		</parameter>
 		<queryString>
 			<![CDATA[SELECT
-     p."nome",     p."nome",
+     p."nome",
+     p."nome",
      p."apresentacao" AS p_apresentacao,
      p."data_inicio" AS p_data_inicio,
      p."data_fim" AS p_data_fim,
@@ -68,7 +66,7 @@ WHERE
 		<field name="p_data_fim" class="java.sql.Date"/>
 		<field name="usuarios_nome" class="java.lang.String"/>
 	</subDataset>
-	<subDataset name="operativosDS" uuid="3e4f3b9d-b681-463a-ab73-1c6c69f4b044">
+	<subDataset name="operativosDS" uuid="1a15a559-39f5-441c-9ea9-f65805b434e2">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="unasus_local"/>
 		<parameter name="programacao_id" class="java.lang.Integer"/>
@@ -78,7 +76,7 @@ WHERE
      operativos."data_inicio" AS operativos_data_inicio,
      operativos."data_prazo" AS operativos_data_prazo,
      operativos."data_encerramento" AS operativos_data_encerramento,
-     lreplace(left(operativos."avaliacao_andamento",300), 'font-size=','fontsizex=') AS operativos_avaliacao_andamento,
+     replace(operativos."avaliacao_andamento", 'font-size=','fontsizex=') AS operativos_avaliacao_andamento,
      operativos."percentual_execucao" AS operativos_percentual_execucao,
      operativos."alteracao_data" AS operativos_alteracao_data,
      andamentos."descricao" AS andamentos_descricao,
@@ -103,7 +101,7 @@ ORDER BY
 		<field name="operativos_inclusao_data" class="java.sql.Date"/>
 		<field name="operativos_andamento_id" class="java.lang.Integer"/>
 	</subDataset>
-	<subDataset name="financeiroDS" uuid="f6916aaf-38e0-4e28-8fb3-2bdb8a417f09">
+	<subDataset name="financeiroDS" uuid="bebf69ab-00d5-474a-84ec-b537400d2f80">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="unasus_local"/>
 		<parameter name="programacao_id" class="java.lang.Integer"/>
@@ -151,21 +149,7 @@ GROUP BY
 	</parameter>
 	<parameter name="user_id" class="java.lang.Integer"/>
 	<queryString>
-		<![CDATA[with 	n1 as ( SELECT  p1.id AS p1_id, p1.singular as p1_singular, p1.has_responsavel as p1_has_responsavel, p1.has_supervisor as p1_has_supervisor, p1.has_equipe as p1_has_equipe, p1.menu as p1_menu, p1.descricao as p1_descricao, p1.ordem as p1_ordem, p1.programacao_id as p1_programacao_id, p1.equipe as p1_equipe, p1.responsavel as p1_responsavel, p1.supervisor as p1_supervisor, p1.instrumento_id as p1_instrumento_id
-	        FROM  vw_report_base p1 where p1.programacao_id is null and p1.instrumento_id=2),
-	n2 as (
-		SELECT n1.*, p2.id AS p2_id, p2.singular as p2_singular, p2.has_responsavel as p2_has_responsavel, p2.has_supervisor as p2_has_supervisor, p2.has_equipe as p2_has_equipe, p2.menu as p2_menu, p2.descricao as p2_descricao, p2.ordem as p2_ordem, p2.programacao_id as p2_programacao_id, p2.equipe as p2_equipe, p2.responsavel as p2_responsavel, p2.supervisor as p2_supervisor, p2.instrumento_id as p2_instrumento_id
-	        FROM    vw_report_base p2 RIGHT JOIN n1 on p2.programacao_id=n1.p1_id),
-	n3 as (
-		SELECT n2.*, p3.id AS p3_id, p3.singular as p3_singular, p3.has_responsavel as p3_has_responsavel, p3.has_supervisor as p3_has_supervisor, p3.has_equipe as p3_has_equipe, p3.menu as p3_menu, p3.descricao as p3_descricao, p3.ordem as p3_ordem, p3.programacao_id as p3_programacao_id, p3.equipe as p3_equipe, p3.responsavel as p3_responsavel, p3.supervisor as p3_supervisor, p3.instrumento_id as p3_instrumento_id
-	        FROM    vw_report_base p3 RIGHT JOIN n2 on p3.programacao_id=n2.p2_id),
-	n4 as (
-		SELECT n3.*, p4.id AS p4_id, p4.singular as p4_singular, p4.has_responsavel as p4_has_responsavel, p4.has_supervisor as p4_has_supervisor, p4.has_equipe as p4_has_equipe, p4.menu as p4_menu, p4.descricao as p4_descricao, p4.ordem as p4_ordem, p4.programacao_id as p4_programacao_id, p4.equipe as p4_equipe, p4.responsavel as p4_responsavel, p4.supervisor as p4_supervisor, p4.instrumento_id as p4_instrumento_id
-	        FROM    vw_report_base p4 RIGHT JOIN n3 on p4.programacao_id=n3.p3_id),
-	n5 as (
-		SELECT n4.*, p5.id AS __detail_id, p5.singular as __detail_singular, p5.has_responsavel as __detail_has_responsavel, p5.has_supervisor as __detail_has_supervisor, p5.has_equipe as __detail_has_equipe, p5.menu as __detail_menu, p5.descricao as __detail_descricao, p5.ordem as __detail_ordem, p5.programacao_id as __detail_programacao_id, p5.equipe as __detail_equipe, p5.responsavel as __detail_responsavel, p5.supervisor as __detail_supervisor, p5.instrumento_id as __detail_instrumento_id
-	        FROM    vw_report_base p5 RIGHT JOIN n4 on p5.programacao_id=n4.p4_id)		        
-SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
+		<![CDATA[WITH n1 as ( SELECT p1.id AS p1_id, p1.singular as p1_singular, p1.has_responsavel as p1_has_responsavel, p1.has_supervisor as p1_has_supervisor, p1.has_equipe as p1_has_equipe, p1.menu as p1_menu, p1.descricao as p1_descricao, p1.ordem as p1_ordem, p1.programacao_id as p1_programacao_id, p1.equipe as p1_equipe, p1.responsavel as p1_responsavel, p1.supervisor as p1_supervisor, p1.instrumento_id as p1_instrumento_id, p1.projeto_id as p1_projeto_id, p1.responsavel_id as p1_responsavel_id, p1.supervisor_id as p1_supervisor_id FROM vw_report_base p1 WHERE p1.programacao_id is null and p1.instrumento_id=2 ), n2 as ( SELECT n1.*, p2.id AS p2_id, p2.singular as p2_singular, p2.has_responsavel as p2_has_responsavel, p2.has_supervisor as p2_has_supervisor, p2.has_equipe as p2_has_equipe, p2.menu as p2_menu, p2.descricao as p2_descricao, p2.ordem as p2_ordem, p2.programacao_id as p2_programacao_id, p2.equipe as p2_equipe, p2.responsavel as p2_responsavel, p2.supervisor as p2_supervisor, p2.instrumento_id as p2_instrumento_id, p2.projeto_id as p2_projeto_id, p2.responsavel_id as p2_responsavel_id, p2.supervisor_id as p2_supervisor_id FROM vw_report_base p2 RIGHT JOIN n1 on p2.programacao_id=n1.p1_id ), n3 as ( SELECT n2.*, p3.id AS p3_id, p3.singular as p3_singular, p3.has_responsavel as p3_has_responsavel, p3.has_supervisor as p3_has_supervisor, p3.has_equipe as p3_has_equipe, p3.menu as p3_menu, p3.descricao as p3_descricao, p3.ordem as p3_ordem, p3.programacao_id as p3_programacao_id, p3.equipe as p3_equipe, p3.responsavel as p3_responsavel, p3.supervisor as p3_supervisor, p3.instrumento_id as p3_instrumento_id, p3.projeto_id as p3_projeto_id, p3.responsavel_id as p3_responsavel_id, p3.supervisor_id as p3_supervisor_id FROM vw_report_base p3 RIGHT JOIN n2 on p3.programacao_id=n2.p2_id ), n4 as ( SELECT n3.*, p4.id AS p4_id, p4.singular as p4_singular, p4.has_responsavel as p4_has_responsavel, p4.has_supervisor as p4_has_supervisor, p4.has_equipe as p4_has_equipe, p4.menu as p4_menu, p4.descricao as p4_descricao, p4.ordem as p4_ordem, p4.programacao_id as p4_programacao_id, p4.equipe as p4_equipe, p4.responsavel as p4_responsavel, p4.supervisor as p4_supervisor, p4.instrumento_id as p4_instrumento_id, p4.projeto_id as p4_projeto_id, p4.responsavel_id as p4_responsavel_id, p4.supervisor_id as p4_supervisor_id FROM vw_report_base p4 RIGHT JOIN n3 on p4.programacao_id=n3.p3_id ), n5 as ( SELECT n4.*, p5.id AS p5_id, p5.singular as p5_singular, p5.has_responsavel as p5_has_responsavel, p5.has_supervisor as p5_has_supervisor, p5.has_equipe as p5_has_equipe, p5.menu as p5_menu, p5.descricao as p5_descricao, p5.ordem as p5_ordem, p5.programacao_id as p5_programacao_id, p5.equipe as p5_equipe, p5.responsavel as p5_responsavel, p5.supervisor as p5_supervisor, p5.instrumento_id as p5_instrumento_id, p5.projeto_id as p5_projeto_id, p5.responsavel_id as p5_responsavel_id, p5.supervisor_id as p5_supervisor_id FROM vw_report_base p5 RIGHT JOIN n4 on p5.programacao_id=n4.p4_id ) SELECT * FROM n5 WHERE n5.p5_projeto_id=3 order by p1_id,p2_id,p3_id,p4_id,p5_id]]>
 	</queryString>
 	<field name="p1_id" class="java.lang.Integer"/>
 	<field name="p1_singular" class="java.lang.String"/>
