--- a/application/modules/relatorio/views/scripts/index/geral_financeiro.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_financeiro.jrxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
+<!-- 2017-06-14T09:48:42 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_financeiro" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="c37fc5d7-804c-4cfd-bd01-0fffba3f9b70">
 	<property name="ireport.zoom" value="1.6105100000000008"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<style name="Title" fontName="PT Sans" fontSize="26" isBold="true" pdfFontName="Helvetica-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="PT Sans" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="PT Sans" fontSize="12" isBold="true"/>
@@ -53,76 +56,79 @@ GROUP BY
 	</pageHeader>
 	<columnHeader>
 		<band height="12" splitType="Stretch">
-			<staticText>
-				<reportElement style="Detail" x="0" y="0" width="190" height="12" uuid="2ccf9974-61ac-44a7-8a7e-affc3a47cf99"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement>
-					<font size="8" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Descrição]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="Detail" x="190" y="0" width="185" height="12" uuid="6307ad97-3a0a-4181-945e-dcd66ee3c0db"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement>
-					<font size="8" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Origem]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="Detail" x="375" y="0" width="60" height="12" uuid="0b09732f-a955-4262-ac52-785db1af90b7"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Right">
-					<font size="8" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Programado]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="Detail" x="435" y="0" width="60" height="12" uuid="0b09732f-a955-4262-ac52-785db1af90b7"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Right">
-					<font size="8" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Executado]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="Detail" x="495" y="0" width="60" height="12" uuid="0b09732f-a955-4262-ac52-785db1af90b7"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Right">
-					<font size="8" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Saldo]]></text>
-			</staticText>
+			<frame>
+				<reportElement x="0" y="0" width="555" height="12" uuid="723972be-81b3-494d-9982-99a0b03ae0a4"/>
+				<staticText>
+					<reportElement style="Detail" x="0" y="0" width="190" height="12" uuid="2ccf9974-61ac-44a7-8a7e-affc3a47cf99"/>
+					<box>
+						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.5"/>
+						<leftPen lineWidth="0.5"/>
+						<bottomPen lineWidth="0.5"/>
+						<rightPen lineWidth="0.5"/>
+					</box>
+					<textElement>
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Descrição]]></text>
+				</staticText>
+				<staticText>
+					<reportElement style="Detail" x="190" y="0" width="185" height="12" uuid="6307ad97-3a0a-4181-945e-dcd66ee3c0db"/>
+					<box>
+						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.5"/>
+						<leftPen lineWidth="0.5"/>
+						<bottomPen lineWidth="0.5"/>
+						<rightPen lineWidth="0.5"/>
+					</box>
+					<textElement>
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Origem]]></text>
+				</staticText>
+				<staticText>
+					<reportElement style="Detail" x="375" y="0" width="60" height="12" uuid="0b09732f-a955-4262-ac52-785db1af90b7"/>
+					<box>
+						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.5"/>
+						<leftPen lineWidth="0.5"/>
+						<bottomPen lineWidth="0.5"/>
+						<rightPen lineWidth="0.5"/>
+					</box>
+					<textElement textAlignment="Right">
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Programado]]></text>
+				</staticText>
+				<staticText>
+					<reportElement style="Detail" x="435" y="0" width="60" height="12" uuid="0b09732f-a955-4262-ac52-785db1af90b7"/>
+					<box>
+						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.5"/>
+						<leftPen lineWidth="0.5"/>
+						<bottomPen lineWidth="0.5"/>
+						<rightPen lineWidth="0.5"/>
+					</box>
+					<textElement textAlignment="Right">
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Executado]]></text>
+				</staticText>
+				<staticText>
+					<reportElement style="Detail" x="495" y="0" width="60" height="12" uuid="0b09732f-a955-4262-ac52-785db1af90b7"/>
+					<box>
+						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.5"/>
+						<leftPen lineWidth="0.5"/>
+						<bottomPen lineWidth="0.5"/>
+						<rightPen lineWidth="0.5"/>
+					</box>
+					<textElement textAlignment="Right">
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Saldo]]></text>
+				</staticText>
+			</frame>
 		</band>
 	</columnHeader>
 	<detail>
