--- a/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_operativo" language="groovy" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="11259c1e-f1a2-45ab-b041-d07e5220a48a">
+<!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
+<!-- 2017-06-13T21:04:55 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral_operativo" pageWidth="555" pageHeight="802" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="11259c1e-f1a2-45ab-b041-d07e5220a48a">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -14,7 +16,11 @@
 ($F{operativos_data_inicio}.before(new java.util.Date()) &&
 $F{operativos_data_prazo}.after( new java.util.Date() ))
 &&
-((((new java.util.Date()).getTime()-$F{operativos_data_inicio}.getTime() ).doubleValue()/($F{operativos_data_prazo}.getTime()-$F{operativos_data_inicio}.getTime()).doubleValue()) > new Double(0.8))]]></conditionExpression>
+(
+	(
+		(new Long((new java.util.Date()).getTime()-$F{operativos_data_inicio}.getTime()) ).doubleValue()/(new Long($F{operativos_data_prazo}.getTime()-$F{operativos_data_inicio}.getTime())).doubleValue()
+	) > new Double(0.8)
+)]]></conditionExpression>
 			<style backcolor="#F1C40F"/>
 		</conditionalStyle>
 		<conditionalStyle>
@@ -41,7 +47,7 @@ $F{operativos_data_prazo}.after( new java.util.Date() ))
      operativos."data_inicio" AS operativos_data_inicio,
      operativos."data_prazo" AS operativos_data_prazo,
      operativos."data_encerramento" AS operativos_data_encerramento,
-     operativos."avaliacao_andamento" AS operativos_avaliacao_andamento,
+     replace(operativos."avaliacao_andamento", 'font-size=','fontsizex=') AS operativos_avaliacao_andamento,
      operativos."percentual_execucao" AS operativos_percentual_execucao,
      operativos."alteracao_data" AS operativos_alteracao_data,
      andamentos."descricao" AS andamentos_descricao,
@@ -82,7 +88,9 @@ ORDER BY
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 					<reportElement style="Detail" positionType="Float" x="2" y="28" width="553" height="11" uuid="7026733a-5941-4b8e-9c42-d2623b1d8a71"/>
 					<textElement markup="html"/>
-					<textFieldExpression><![CDATA["<style>span{baddig:0}</style><div style=\"line-height: 70%;padding:0\"><font size=1>"  + $F{operativos_avaliacao_andamento} + "</font></div>"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["<style>span{baddig:0} body{font-size: 12pt !important; font-family: 'PT Sans', Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
++ $F{operativos_avaliacao_andamento}.substring( Integer.parseInt("0") , Math.min( $F{operativos_avaliacao_andamento}.length(), Integer.parseInt("2000")) )
+ + "</font></div>"]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 					<reportElement style="Detail" positionType="Float" x="309" y="0" width="38" height="11" uuid="fbfaa3a5-9137-443f-bed4-c11bf97e752a"/>
